# ai-projects

./: .gitignore  README.md  SECURITY_PUBLISH_NOTES.md
Eira/: Eira_Context_Summary.md  Eira_Development_Log.md  Eira_Personality.md  Eira_User_Guide.md
Eira V2/: Architecture_Comparison.md  Leon_vs_Eira_DeepDive.md  Model_Setup_Guide.md
Eira V2/Eira_Legacy/: Download_Eira_Brain.bat  Install_Ollama.bat  Kill_All_Eira.bat  Make_Backup.bat  Start_Backup_Vision.bat  Start_Eira_Lab.bat  Start_Eira_Lab_Admin.bat  Start_Eira_V2_Legacy_Admin.bat  check_env.py  debug_brain_init.py  debug_import.py  debug_models.py  eira_brain.py  eira_brain.py.bak  eira_skills.py  hand_controller.py  holographic_ui.py  main_eira_lab.py  requirements.txt  (+3 more)
EiraLearn/: package-lock.json  package.json
Eira_App/: OneClickStart.bat  _find_node.txt  _find_node2.txt  _machine_path2.txt  _mp.txt  package-lock.json  package.json  tailwind.config.js  tsc_errors.txt  vite.config.ts
Eira_Chat/: Start_Eira_Ava.bat  eira_chat_brain.py
Eira_Nexos_Client/: Eira_State_Report.md  Start_Eira_Chat.bat  config.json  eira_chat_ui.py  eira_style.qss  styles.json
Eira_Nexus/: eira-engine.spec  identity.json  nexus_adapter.py
Heira/: heirabot.apps.json  launch-heira-telegram.bat  node.cmd  npm.cmd  package-lock.json  package.json  start.cmd
human-typer/: admin_shell.bat  pyproject.toml
human-typer/src/human_typer/: __init__.py  __main__.py  config.py
human-typer/src/human_typer/ai/: client.py
human-typer/src/human_typer/cli/: app.py
human-typer/src/human_typer/control/: hotkeys.py
human-typer/src/human_typer/engine/: distributions.py  normalize.py  tokenizer.py  typer.py  typo.py
human-typer/src/human_typer/io/: protocol.py  pyautogui_backend.py
human-typer/src/human_typer/profiles/: models.py  repository.py  trainer.py
human-typer/tests/: conftest.py
human-typer/tests/ai/: test_client.py
human-typer/tests/cli/: test_app.py
human-typer/tests/engine/: test_distributions.py  test_normalize.py  test_tokenizer.py  test_typer.py  test_typo.py
human-typer/tests/io/: test_backend.py
human-typer/tests/profiles/: test_profiles.py  test_trainer.py
local-rag-md/: .env.example  .gitignore  README.md  docker-compose.yml  portfolio.md  pyproject.toml  start_brain.bat
local-rag-md/config/: boost_rules.json  low_value_patterns.json
local-rag-md/scripts/: img_to_ascii.py  slice_sprite.py
local-rag-md/sql/: 001_init.sql
local-rag-md/src/local_rag/: api.py  chat.py  chunking.py  cli.py  config.py  db.py  indexer.py  ollama_client.py  optillm_client.py  retrieval.py  router.py  uiux_collector.py  writer.py
local-rag-md/static/: app.js  index.html  styles.css
local-rag-md/static/avatar/: avatar_ascii.css  frames.js  renderer.js
magic-pointer-mcp/: README.md  action.py  config.py  overlay.py  pyproject.toml  screen.py  server.py  setup.bat  vision.py
(+84 files in other folders)
