[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "human-typer"
version = "2.0.0"
description = "Simulador de escritura humana con perfiles estadísticos reales"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Digital Lab" }]
dependencies = [
    "pyautogui>=0.9.54",
    "keyboard>=0.13.5",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "pytest-mock>=3.14",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
human-typer = "human_typer.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/human_typer"]

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["human_typer"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
packages = ["human_typer"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers --cov=human_typer --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["human_typer"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
