[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag-md"
version = "0.2.0"
description = "Eira Brain Chat — Local RAG chat with multi-LLM routing for Obsidian and Markdown files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cachetools>=5.3,<6.0",
  "edge-tts>=6.1,<7.0",
  "faiss-cpu>=1.7,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "numpy>=1.26,<3.0",
  "openai>=1.0,<2.0",
  "python-dotenv>=1.0,<2.0",
  "slowapi>=0.1,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
local-rag = "local_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
