[project]
name = "magic-pointer-mcp"
version = "1.0.0"
description = "AI cursor MCP server - sees screen, thinks with vision model, acts on desktop"
requires-python = ">=3.10"
dependencies = [
    "mss>=10.0",
    "pyautogui>=0.9",
    "Pillow>=10.0",
    "httpx>=0.27",
    "pyperclip>=1.8",
    "PyGetWindow>=0.0",
]

[tool.setuptools]
py-modules = ["config", "screen", "vision", "action", "overlay", "server"]

[project.scripts]
magic-pointer = "server:main"
